# CG-Final

./: CMakeLists.txt  IDEA.xmind  README.md  high-level的一些想法.docx  框架头文件分析.xmind
media/: info.cgf
src/: main.cpp  test.cpp  test.h  texture_mapping.cpp  texture_mapping.h
src/base/: PathTracingResources.h  baseFunc.h  bvh.h  camera.cpp  frustum.h  global.h  glsl_program.cpp  glsl_program.h  light.h  micro_obj_loader.h  model.cpp  model.h  scene.cpp  scene.h  scene_load.h  skybox.cpp  texture.cpp  texture.h
src/shaders/: LightCubefs.glsl  LightCubevs.glsl  PBRfs.glsl  PBRvs.glsl  PCFfs.glsl  PCSSfs.glsl  Phongfs.glsl  Phongvs.glsl  ShadowMappingfs.glsl  ShadowMappingvs.glsl  Shadowfs.glsl
src/shaders/PathTracingShader/: Deferfs.glsl  Pass2fs.glsl  Pass3fs.glsl  PathTracingfs.glsl  PathTracingvs.glsl  RTRTfs.glsl  RTRTvs.glsl
src/shaders/SSRshader/: Filterfs.glsl  Filtervs.glsl  GBufferfs.glsl  GBuffervs.glsl  SSRfs.glsl  SSRvs.glsl
src/shaders/ShadowShader/: LightCubefs.glsl  LightCubevs.glsl  OmnidirectionalShadowfs.glsl  OmnidirectionalShadowvs.glsl  PCFfs.glsl  PCSSfs.glsl  PointShadowsfs.glsl  PointShadowsgs.glsl  PointShadowsvs.glsl  ShadowMappingfs.glsl  Shadowvs.glsl
